// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — Flutter widget stubs > prefixed-class (edge blueprints) 1`] = `
[
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

import '../../theme/app_colors.dart';
import '../../theme/app_spacing.dart';

enum StatCardTrend { up, down, flat }

enum StatCardTone { defaultToken, accent }

/// A KPI tile.
class StatCard extends StatelessWidget {
  const StatCard({
    super.key,
    required this.value,
    this.trend,
    this.tone = StatCardTone.defaultToken,
    this.precision = 2,
    required this.caption,
    this.icon,
    this.inToken = true,
    required this.child,
    this.loose,
  });

  final double value;
  final StatCardTrend? trend;
  final StatCardTone tone;
  final double precision;
  /// Label under the value.
  final String caption;
  final Widget? icon;
  final bool inToken;
  final Widget child;
  final String? loose;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        if (!_StatCardTokens.visibleAt(constraints.maxWidth)) return const SizedBox.shrink();
        final t = _StatCardTokens.resolve(constraints.maxWidth);
        final box = Container(
          width: t.size,
          height: t.size,
          padding: EdgeInsets.symmetric(horizontal: t.padding ?? 0, vertical: t.padding ?? 0),
          decoration: BoxDecoration(
            color: t.backgroundColor,
            borderRadius: BorderRadius.circular(t.radius ?? 0),
            border: t.borderColor == null ? null : Border.all(color: t.borderColor!, width: 1),
            boxShadow: t.shadow,
          ),
          child: DefaultTextStyle.merge(style: TextStyle(color: t.textColor), child: child),
        );
        return box;
      },
    );
  }
}

/// StatCard's design tokens: base, per-variant and per-breakpoint overrides.
class _StatCardTokens {
  const _StatCardTokens({this.backgroundColor, this.textColor, this.borderColor, this.radius, this.shadow, this.padding, this.size});

  final Color? backgroundColor;
  final Color? textColor;
  final Color? borderColor;
  final double? radius;
  final List<BoxShadow>? shadow;
  final double? padding;
  final double? size;

  _StatCardTokens merge(_StatCardTokens o) => _StatCardTokens(
        backgroundColor: o.backgroundColor ?? backgroundColor,
        textColor: o.textColor ?? textColor,
        borderColor: o.borderColor ?? borderColor,
        radius: o.radius ?? radius,
        shadow: o.shadow ?? shadow,
        padding: o.padding ?? padding,
        size: o.size ?? size,
      );

  static const base = _StatCardTokens(
    backgroundColor: AppColors.surface,
    textColor: Color(0xFF123456),
    borderColor: AppColors.border,
    radius: 12,
    shadow: AppShadows.md,
    padding: AppSpacing.lg,
    size: 96,
  );
  static const atDesktop = _StatCardTokens(
    shadow: [BoxShadow(color: Color(0x33000000), offset: Offset(0, 2), blurRadius: 4, spreadRadius: 0)],
  );

  /// Mobile-first cascade: base, then each breakpoint the width reaches.
  static _StatCardTokens resolve(double width) {
    var t = base;
    if (width >= AppBreakpoints.desktop) t = t.merge(atDesktop);
    // TODO: breakpoint "mystery" is not in schema.breakpoints — skipped.
    return t;
  }

  static bool visibleAt(double width) {
    var visible = true;
    if (width >= AppBreakpoints.tablet) visible = false;
    if (width >= AppBreakpoints.desktop) visible = true;
    return visible;
  }
}
",
    "filename": "lib/widgets/StatCard/stat_card.dart",
    "language": "dart",
  },
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

import '../../theme/app_spacing.dart';

/// A hairline rule.
class Divider extends StatelessWidget {
  const Divider({
    super.key,
  });

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final t = _DividerTokens.resolve(constraints.maxWidth);
        final box = Container(
          width: t.width,
          height: t.height,
          decoration: BoxDecoration(
            border: t.borderWidth == null ? null : Border.all(width: t.borderWidth!),
          ),
          child: const SizedBox.shrink(),
        );
        return box;
      },
    );
  }
}

/// Divider's design tokens: base, per-variant and per-breakpoint overrides.
class _DividerTokens {
  const _DividerTokens({this.borderWidth, this.width, this.height});

  final double? borderWidth;
  final double? width;
  final double? height;

  _DividerTokens merge(_DividerTokens o) => _DividerTokens(
        borderWidth: o.borderWidth ?? borderWidth,
        width: o.width ?? width,
        height: o.height ?? height,
      );

  static const base = _DividerTokens(
    borderWidth: AppBorders.thin,
    width: 1200,
    height: 1,
  );

  /// Mobile-first cascade: base, then each breakpoint the width reaches.
  static _DividerTokens resolve(double width) {
    return base;
  }
}
",
    "filename": "lib/widgets/Divider/divider.dart",
    "language": "dart",
  },
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

enum EmptyVariant { a, b }

/// No tokens at all.
class Empty extends StatelessWidget {
  const Empty({
    super.key,
    this.variant = EmptyVariant.a,
  });

  final EmptyVariant variant;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final Widget box = const SizedBox.shrink();
        return box;
      },
    );
  }
}
",
    "filename": "lib/widgets/Empty/empty.dart",
    "language": "dart",
  },
]
`;

exports[`golden — Flutter widget stubs > prefixed-class (responsive Button + Input) 1`] = `
[
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

import '../../theme/app_colors.dart';
import '../../theme/app_spacing.dart';
import '../../theme/app_typography.dart';

enum ButtonVariant { primary, secondary }

enum ButtonSize { sm, md, lg }

/// A clickable action trigger. Primary drives the single most important action per view.
class Button extends StatelessWidget {
  const Button({
    super.key,
    this.variant = ButtonVariant.primary,
    this.size = ButtonSize.md,
    this.disabled = false,
    this.loading = false,
    this.child,
    this.onPressed,
  });

  final ButtonVariant variant;
  final ButtonSize size;
  final bool disabled;
  final bool loading;
  /// Button label content.
  final Widget? child;
  final VoidCallback? onPressed;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final t = _ButtonTokens.resolve(variant, constraints.maxWidth);
        final box = Container(
          padding: EdgeInsets.symmetric(horizontal: t.paddingX ?? 0, vertical: t.paddingY ?? 0),
          decoration: BoxDecoration(
            color: t.backgroundColor,
            borderRadius: BorderRadius.circular(t.radius ?? 0),
            border: t.borderColor == null ? null : Border.all(color: t.borderColor!, width: t.borderWidth ?? 1),
          ),
          child: DefaultTextStyle.merge(style: (t.textStyle ?? const TextStyle()).copyWith(color: t.textColor), child: loading ? const SizedBox.square(dimension: 16, child: CircularProgressIndicator(strokeWidth: 2)) : child ?? const SizedBox.shrink()),
        );
        final enabled = onPressed != null && !disabled && !loading;
        return Semantics(
          button: true,
          enabled: enabled,
          child: MouseRegion(
            cursor: enabled ? SystemMouseCursors.click : SystemMouseCursors.basic,
            child: GestureDetector(onTap: enabled ? onPressed : null, child: box),
          ),
        );
      },
    );
  }
}

/// Button's design tokens: base, per-variant and per-breakpoint overrides.
class _ButtonTokens {
  const _ButtonTokens({this.backgroundColor, this.textColor, this.textStyle, this.borderColor, this.borderWidth, this.radius, this.paddingX, this.paddingY});

  final Color? backgroundColor;
  final Color? textColor;
  final TextStyle? textStyle;
  final Color? borderColor;
  final double? borderWidth;
  final double? radius;
  final double? paddingX;
  final double? paddingY;

  _ButtonTokens merge(_ButtonTokens o) => _ButtonTokens(
        backgroundColor: o.backgroundColor ?? backgroundColor,
        textColor: o.textColor ?? textColor,
        textStyle: o.textStyle ?? textStyle,
        borderColor: o.borderColor ?? borderColor,
        borderWidth: o.borderWidth ?? borderWidth,
        radius: o.radius ?? radius,
        paddingX: o.paddingX ?? paddingX,
        paddingY: o.paddingY ?? paddingY,
      );

  static const base = _ButtonTokens(
    backgroundColor: AppColors.primary,
    textColor: AppColors.surface,
    textStyle: AppTypography.labelMd,
    radius: AppRadius.md,
    paddingX: AppSpacing.md,
    paddingY: AppSpacing.sm,
  );
  static const variantPrimary = _ButtonTokens();
  static const variantSecondary = _ButtonTokens(
    backgroundColor: AppColors.surface,
    textColor: AppColors.primary,
    borderColor: AppColors.border,
    borderWidth: AppBorders.thin,
  );
  static const atTablet = _ButtonTokens(
    paddingX: AppSpacing.lg,
  );
  static const atDesktop = _ButtonTokens(
    paddingX: AppSpacing.xl,
    paddingY: AppSpacing.md,
  );

  /// Mobile-first cascade: base, then the variant, then each breakpoint the width reaches.
  static _ButtonTokens resolve(ButtonVariant variant, double width) {
    var t = base.merge(switch (variant) {
      ButtonVariant.primary => variantPrimary,
      ButtonVariant.secondary => variantSecondary,
    });
    if (width >= AppBreakpoints.tablet) t = t.merge(atTablet);
    if (width >= AppBreakpoints.desktop) t = t.merge(atDesktop);
    return t;
  }
}
",
    "filename": "lib/widgets/Button/button.dart",
    "language": "dart",
  },
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

import '../../theme/app_colors.dart';
import '../../theme/app_spacing.dart';
import '../../theme/app_typography.dart';

/// A single-line text field with label, helper text, and error states.
class Input extends StatelessWidget {
  const Input({
    super.key,
    this.label,
    this.placeholder,
    this.disabled = false,
    this.error,
    this.controller,
    this.onChanged,
  });

  final String? label;
  final String? placeholder;
  final bool disabled;
  /// Error message; switches the field to its error state.
  final String? error;
  final TextEditingController? controller;
  final ValueChanged<String>? onChanged;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final t = _InputTokens.resolve(constraints.maxWidth);
        final border = OutlineInputBorder(borderRadius: BorderRadius.circular(t.radius ?? 0), borderSide: t.borderColor == null ? BorderSide.none : BorderSide(color: t.borderColor!, width: t.borderWidth ?? 1));
        final field = TextField(
          controller: controller,
          onChanged: onChanged,
          enabled: !disabled,
          style: (t.textStyle ?? const TextStyle()).copyWith(color: t.textColor),
          decoration: InputDecoration(
            labelText: label,
            hintText: placeholder,
            errorText: error,
            filled: t.backgroundColor != null,
            fillColor: t.backgroundColor,
            contentPadding: EdgeInsets.symmetric(horizontal: t.paddingX ?? 0, vertical: t.paddingY ?? 0),
            border: border,
            enabledBorder: border,
          ),
        );
        return field;
      },
    );
  }
}

/// Input's design tokens: base, per-variant and per-breakpoint overrides.
class _InputTokens {
  const _InputTokens({this.backgroundColor, this.textColor, this.textStyle, this.borderColor, this.borderWidth, this.radius, this.paddingX, this.paddingY});

  final Color? backgroundColor;
  final Color? textColor;
  final TextStyle? textStyle;
  final Color? borderColor;
  final double? borderWidth;
  final double? radius;
  final double? paddingX;
  final double? paddingY;

  _InputTokens merge(_InputTokens o) => _InputTokens(
        backgroundColor: o.backgroundColor ?? backgroundColor,
        textColor: o.textColor ?? textColor,
        textStyle: o.textStyle ?? textStyle,
        borderColor: o.borderColor ?? borderColor,
        borderWidth: o.borderWidth ?? borderWidth,
        radius: o.radius ?? radius,
        paddingX: o.paddingX ?? paddingX,
        paddingY: o.paddingY ?? paddingY,
      );

  static const base = _InputTokens(
    backgroundColor: AppColors.surface,
    textColor: AppColors.onSurface,
    textStyle: AppTypography.bodyMd,
    borderColor: AppColors.border,
    borderWidth: AppBorders.thin,
    radius: AppRadius.md,
    paddingX: AppSpacing.md,
    paddingY: AppSpacing.sm,
  );

  /// Mobile-first cascade: base, then each breakpoint the width reaches.
  static _InputTokens resolve(double width) {
    return base;
  }
}
",
    "filename": "lib/widgets/Input/input.dart",
    "language": "dart",
  },
]
`;

exports[`golden — Flutter widget stubs > raw (edge blueprints) 1`] = `
[
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

import '../../theme/app_colors.dart';
import '../../theme/app_spacing.dart';

enum StatCardTrend { up, down, flat }

enum StatCardTone { defaultToken, accent }

/// A KPI tile.
class StatCard extends StatelessWidget {
  const StatCard({
    super.key,
    required this.value,
    this.trend,
    this.tone = StatCardTone.defaultToken,
    this.precision = 2,
    required this.caption,
    this.icon,
    this.inToken = true,
    required this.child,
    this.loose,
  });

  final double value;
  final StatCardTrend? trend;
  final StatCardTone tone;
  final double precision;
  /// Label under the value.
  final String caption;
  final Widget? icon;
  final bool inToken;
  final Widget child;
  final String? loose;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        if (!_StatCardTokens.visibleAt(constraints.maxWidth)) return const SizedBox.shrink();
        final t = _StatCardTokens.resolve(constraints.maxWidth);
        final box = Container(
          width: t.size,
          height: t.size,
          padding: EdgeInsets.symmetric(horizontal: t.padding ?? 0, vertical: t.padding ?? 0),
          decoration: BoxDecoration(
            color: t.backgroundColor,
            borderRadius: BorderRadius.circular(t.radius ?? 0),
            border: t.borderColor == null ? null : Border.all(color: t.borderColor!, width: 1),
            boxShadow: t.shadow,
          ),
          child: DefaultTextStyle.merge(style: TextStyle(color: t.textColor), child: child),
        );
        return box;
      },
    );
  }
}

/// StatCard's design tokens: base, per-variant and per-breakpoint overrides.
class _StatCardTokens {
  const _StatCardTokens({this.backgroundColor, this.textColor, this.borderColor, this.radius, this.shadow, this.padding, this.size});

  final Color? backgroundColor;
  final Color? textColor;
  final Color? borderColor;
  final double? radius;
  final List<BoxShadow>? shadow;
  final double? padding;
  final double? size;

  _StatCardTokens merge(_StatCardTokens o) => _StatCardTokens(
        backgroundColor: o.backgroundColor ?? backgroundColor,
        textColor: o.textColor ?? textColor,
        borderColor: o.borderColor ?? borderColor,
        radius: o.radius ?? radius,
        shadow: o.shadow ?? shadow,
        padding: o.padding ?? padding,
        size: o.size ?? size,
      );

  static const base = _StatCardTokens(
    backgroundColor: kColorSurface,
    textColor: Color(0xFF123456),
    borderColor: kColorBorder,
    radius: 12,
    shadow: kShadowMd,
    padding: kSpacingLg,
    size: 96,
  );
  static const atDesktop = _StatCardTokens(
    shadow: [BoxShadow(color: Color(0x33000000), offset: Offset(0, 2), blurRadius: 4, spreadRadius: 0)],
  );

  /// Mobile-first cascade: base, then each breakpoint the width reaches.
  static _StatCardTokens resolve(double width) {
    var t = base;
    if (width >= kBreakpointDesktop) t = t.merge(atDesktop);
    // TODO: breakpoint "mystery" is not in schema.breakpoints — skipped.
    return t;
  }

  static bool visibleAt(double width) {
    var visible = true;
    if (width >= kBreakpointTablet) visible = false;
    if (width >= kBreakpointDesktop) visible = true;
    return visible;
  }
}
",
    "filename": "lib/widgets/StatCard/stat_card.dart",
    "language": "dart",
  },
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

import '../../theme/app_spacing.dart';

/// A hairline rule.
class Divider extends StatelessWidget {
  const Divider({
    super.key,
  });

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final t = _DividerTokens.resolve(constraints.maxWidth);
        final box = Container(
          width: t.width,
          height: t.height,
          decoration: BoxDecoration(
            border: t.borderWidth == null ? null : Border.all(width: t.borderWidth!),
          ),
          child: const SizedBox.shrink(),
        );
        return box;
      },
    );
  }
}

/// Divider's design tokens: base, per-variant and per-breakpoint overrides.
class _DividerTokens {
  const _DividerTokens({this.borderWidth, this.width, this.height});

  final double? borderWidth;
  final double? width;
  final double? height;

  _DividerTokens merge(_DividerTokens o) => _DividerTokens(
        borderWidth: o.borderWidth ?? borderWidth,
        width: o.width ?? width,
        height: o.height ?? height,
      );

  static const base = _DividerTokens(
    borderWidth: kBorderWidthThin,
    width: 1200,
    height: 1,
  );

  /// Mobile-first cascade: base, then each breakpoint the width reaches.
  static _DividerTokens resolve(double width) {
    return base;
  }
}
",
    "filename": "lib/widgets/Divider/divider.dart",
    "language": "dart",
  },
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

enum EmptyVariant { a, b }

/// No tokens at all.
class Empty extends StatelessWidget {
  const Empty({
    super.key,
    this.variant = EmptyVariant.a,
  });

  final EmptyVariant variant;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final Widget box = const SizedBox.shrink();
        return box;
      },
    );
  }
}
",
    "filename": "lib/widgets/Empty/empty.dart",
    "language": "dart",
  },
]
`;

exports[`golden — Flutter widget stubs > raw (responsive Button + Input) 1`] = `
[
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

import '../../theme/app_colors.dart';
import '../../theme/app_spacing.dart';
import '../../theme/app_typography.dart';

enum ButtonVariant { primary, secondary }

enum ButtonSize { sm, md, lg }

/// A clickable action trigger. Primary drives the single most important action per view.
class Button extends StatelessWidget {
  const Button({
    super.key,
    this.variant = ButtonVariant.primary,
    this.size = ButtonSize.md,
    this.disabled = false,
    this.loading = false,
    this.child,
    this.onPressed,
  });

  final ButtonVariant variant;
  final ButtonSize size;
  final bool disabled;
  final bool loading;
  /// Button label content.
  final Widget? child;
  final VoidCallback? onPressed;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final t = _ButtonTokens.resolve(variant, constraints.maxWidth);
        final box = Container(
          padding: EdgeInsets.symmetric(horizontal: t.paddingX ?? 0, vertical: t.paddingY ?? 0),
          decoration: BoxDecoration(
            color: t.backgroundColor,
            borderRadius: BorderRadius.circular(t.radius ?? 0),
            border: t.borderColor == null ? null : Border.all(color: t.borderColor!, width: t.borderWidth ?? 1),
          ),
          child: DefaultTextStyle.merge(style: (t.textStyle ?? const TextStyle()).copyWith(color: t.textColor), child: loading ? const SizedBox.square(dimension: 16, child: CircularProgressIndicator(strokeWidth: 2)) : child ?? const SizedBox.shrink()),
        );
        final enabled = onPressed != null && !disabled && !loading;
        return Semantics(
          button: true,
          enabled: enabled,
          child: MouseRegion(
            cursor: enabled ? SystemMouseCursors.click : SystemMouseCursors.basic,
            child: GestureDetector(onTap: enabled ? onPressed : null, child: box),
          ),
        );
      },
    );
  }
}

/// Button's design tokens: base, per-variant and per-breakpoint overrides.
class _ButtonTokens {
  const _ButtonTokens({this.backgroundColor, this.textColor, this.textStyle, this.borderColor, this.borderWidth, this.radius, this.paddingX, this.paddingY});

  final Color? backgroundColor;
  final Color? textColor;
  final TextStyle? textStyle;
  final Color? borderColor;
  final double? borderWidth;
  final double? radius;
  final double? paddingX;
  final double? paddingY;

  _ButtonTokens merge(_ButtonTokens o) => _ButtonTokens(
        backgroundColor: o.backgroundColor ?? backgroundColor,
        textColor: o.textColor ?? textColor,
        textStyle: o.textStyle ?? textStyle,
        borderColor: o.borderColor ?? borderColor,
        borderWidth: o.borderWidth ?? borderWidth,
        radius: o.radius ?? radius,
        paddingX: o.paddingX ?? paddingX,
        paddingY: o.paddingY ?? paddingY,
      );

  static const base = _ButtonTokens(
    backgroundColor: kColorPrimary,
    textColor: kColorSurface,
    textStyle: kTextLabelMd,
    radius: kRadiusMd,
    paddingX: kSpacingMd,
    paddingY: kSpacingSm,
  );
  static const variantPrimary = _ButtonTokens();
  static const variantSecondary = _ButtonTokens(
    backgroundColor: kColorSurface,
    textColor: kColorPrimary,
    borderColor: kColorBorder,
    borderWidth: kBorderWidthThin,
  );
  static const atTablet = _ButtonTokens(
    paddingX: kSpacingLg,
  );
  static const atDesktop = _ButtonTokens(
    paddingX: kSpacingXl,
    paddingY: kSpacingMd,
  );

  /// Mobile-first cascade: base, then the variant, then each breakpoint the width reaches.
  static _ButtonTokens resolve(ButtonVariant variant, double width) {
    var t = base.merge(switch (variant) {
      ButtonVariant.primary => variantPrimary,
      ButtonVariant.secondary => variantSecondary,
    });
    if (width >= kBreakpointTablet) t = t.merge(atTablet);
    if (width >= kBreakpointDesktop) t = t.merge(atDesktop);
    return t;
  }
}
",
    "filename": "lib/widgets/Button/button.dart",
    "language": "dart",
  },
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.

import 'package:flutter/material.dart';

import '../../theme/app_colors.dart';
import '../../theme/app_spacing.dart';
import '../../theme/app_typography.dart';

/// A single-line text field with label, helper text, and error states.
class Input extends StatelessWidget {
  const Input({
    super.key,
    this.label,
    this.placeholder,
    this.disabled = false,
    this.error,
    this.controller,
    this.onChanged,
  });

  final String? label;
  final String? placeholder;
  final bool disabled;
  /// Error message; switches the field to its error state.
  final String? error;
  final TextEditingController? controller;
  final ValueChanged<String>? onChanged;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final t = _InputTokens.resolve(constraints.maxWidth);
        final border = OutlineInputBorder(borderRadius: BorderRadius.circular(t.radius ?? 0), borderSide: t.borderColor == null ? BorderSide.none : BorderSide(color: t.borderColor!, width: t.borderWidth ?? 1));
        final field = TextField(
          controller: controller,
          onChanged: onChanged,
          enabled: !disabled,
          style: (t.textStyle ?? const TextStyle()).copyWith(color: t.textColor),
          decoration: InputDecoration(
            labelText: label,
            hintText: placeholder,
            errorText: error,
            filled: t.backgroundColor != null,
            fillColor: t.backgroundColor,
            contentPadding: EdgeInsets.symmetric(horizontal: t.paddingX ?? 0, vertical: t.paddingY ?? 0),
            border: border,
            enabledBorder: border,
          ),
        );
        return field;
      },
    );
  }
}

/// Input's design tokens: base, per-variant and per-breakpoint overrides.
class _InputTokens {
  const _InputTokens({this.backgroundColor, this.textColor, this.textStyle, this.borderColor, this.borderWidth, this.radius, this.paddingX, this.paddingY});

  final Color? backgroundColor;
  final Color? textColor;
  final TextStyle? textStyle;
  final Color? borderColor;
  final double? borderWidth;
  final double? radius;
  final double? paddingX;
  final double? paddingY;

  _InputTokens merge(_InputTokens o) => _InputTokens(
        backgroundColor: o.backgroundColor ?? backgroundColor,
        textColor: o.textColor ?? textColor,
        textStyle: o.textStyle ?? textStyle,
        borderColor: o.borderColor ?? borderColor,
        borderWidth: o.borderWidth ?? borderWidth,
        radius: o.radius ?? radius,
        paddingX: o.paddingX ?? paddingX,
        paddingY: o.paddingY ?? paddingY,
      );

  static const base = _InputTokens(
    backgroundColor: kColorSurface,
    textColor: kColorOnSurface,
    textStyle: kTextBodyMd,
    borderColor: kColorBorder,
    borderWidth: kBorderWidthThin,
    radius: kRadiusMd,
    paddingX: kSpacingMd,
    paddingY: kSpacingSm,
  );

  /// Mobile-first cascade: base, then each breakpoint the width reaches.
  static _InputTokens resolve(double width) {
    return base;
  }
}
",
    "filename": "lib/widgets/Input/input.dart",
    "language": "dart",
  },
]
`;

exports[`golden — Flutter widget stubs > snake_const (edge blueprints) 1`] = `
[
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.
// ignore_for_file: non_constant_identifier_names, constant_identifier_names

import 'package:flutter/material.dart';

import '../../theme/app_colors.dart';
import '../../theme/app_spacing.dart';

enum StatCardTrend { up, down, flat }

enum StatCardTone { defaultToken, accent }

/// A KPI tile.
class StatCard extends StatelessWidget {
  const StatCard({
    super.key,
    required this.value,
    this.trend,
    this.tone = StatCardTone.defaultToken,
    this.precision = 2,
    required this.caption,
    this.icon,
    this.inToken = true,
    required this.child,
    this.loose,
  });

  final double value;
  final StatCardTrend? trend;
  final StatCardTone tone;
  final double precision;
  /// Label under the value.
  final String caption;
  final Widget? icon;
  final bool inToken;
  final Widget child;
  final String? loose;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        if (!_StatCardTokens.visibleAt(constraints.maxWidth)) return const SizedBox.shrink();
        final t = _StatCardTokens.resolve(constraints.maxWidth);
        final box = Container(
          width: t.size,
          height: t.size,
          padding: EdgeInsets.symmetric(horizontal: t.padding ?? 0, vertical: t.padding ?? 0),
          decoration: BoxDecoration(
            color: t.backgroundColor,
            borderRadius: BorderRadius.circular(t.radius ?? 0),
            border: t.borderColor == null ? null : Border.all(color: t.borderColor!, width: 1),
            boxShadow: t.shadow,
          ),
          child: DefaultTextStyle.merge(style: TextStyle(color: t.textColor), child: child),
        );
        return box;
      },
    );
  }
}

/// StatCard's design tokens: base, per-variant and per-breakpoint overrides.
class _StatCardTokens {
  const _StatCardTokens({this.backgroundColor, this.textColor, this.borderColor, this.radius, this.shadow, this.padding, this.size});

  final Color? backgroundColor;
  final Color? textColor;
  final Color? borderColor;
  final double? radius;
  final List<BoxShadow>? shadow;
  final double? padding;
  final double? size;

  _StatCardTokens merge(_StatCardTokens o) => _StatCardTokens(
        backgroundColor: o.backgroundColor ?? backgroundColor,
        textColor: o.textColor ?? textColor,
        borderColor: o.borderColor ?? borderColor,
        radius: o.radius ?? radius,
        shadow: o.shadow ?? shadow,
        padding: o.padding ?? padding,
        size: o.size ?? size,
      );

  static const base = _StatCardTokens(
    backgroundColor: c_surface,
    textColor: Color(0xFF123456),
    borderColor: c_border,
    radius: 12,
    shadow: sh_md,
    padding: s_lg,
    size: 96,
  );
  static const atDesktop = _StatCardTokens(
    shadow: [BoxShadow(color: Color(0x33000000), offset: Offset(0, 2), blurRadius: 4, spreadRadius: 0)],
  );

  /// Mobile-first cascade: base, then each breakpoint the width reaches.
  static _StatCardTokens resolve(double width) {
    var t = base;
    if (width >= bp_desktop) t = t.merge(atDesktop);
    // TODO: breakpoint "mystery" is not in schema.breakpoints — skipped.
    return t;
  }

  static bool visibleAt(double width) {
    var visible = true;
    if (width >= bp_tablet) visible = false;
    if (width >= bp_desktop) visible = true;
    return visible;
  }
}
",
    "filename": "lib/widgets/StatCard/stat_card.dart",
    "language": "dart",
  },
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.
// ignore_for_file: non_constant_identifier_names, constant_identifier_names

import 'package:flutter/material.dart';

import '../../theme/app_spacing.dart';

/// A hairline rule.
class Divider extends StatelessWidget {
  const Divider({
    super.key,
  });

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final t = _DividerTokens.resolve(constraints.maxWidth);
        final box = Container(
          width: t.width,
          height: t.height,
          decoration: BoxDecoration(
            border: t.borderWidth == null ? null : Border.all(width: t.borderWidth!),
          ),
          child: const SizedBox.shrink(),
        );
        return box;
      },
    );
  }
}

/// Divider's design tokens: base, per-variant and per-breakpoint overrides.
class _DividerTokens {
  const _DividerTokens({this.borderWidth, this.width, this.height});

  final double? borderWidth;
  final double? width;
  final double? height;

  _DividerTokens merge(_DividerTokens o) => _DividerTokens(
        borderWidth: o.borderWidth ?? borderWidth,
        width: o.width ?? width,
        height: o.height ?? height,
      );

  static const base = _DividerTokens(
    borderWidth: bw_thin,
    width: 1200,
    height: 1,
  );

  /// Mobile-first cascade: base, then each breakpoint the width reaches.
  static _DividerTokens resolve(double width) {
    return base;
  }
}
",
    "filename": "lib/widgets/Divider/divider.dart",
    "language": "dart",
  },
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.
// ignore_for_file: non_constant_identifier_names, constant_identifier_names

import 'package:flutter/material.dart';

enum EmptyVariant { a, b }

/// No tokens at all.
class Empty extends StatelessWidget {
  const Empty({
    super.key,
    this.variant = EmptyVariant.a,
  });

  final EmptyVariant variant;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final Widget box = const SizedBox.shrink();
        return box;
      },
    );
  }
}
",
    "filename": "lib/widgets/Empty/empty.dart",
    "language": "dart",
  },
]
`;

exports[`golden — Flutter widget stubs > snake_const (responsive Button + Input) 1`] = `
[
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.
// ignore_for_file: non_constant_identifier_names, constant_identifier_names

import 'package:flutter/material.dart';

import '../../theme/app_colors.dart';
import '../../theme/app_spacing.dart';
import '../../theme/app_typography.dart';

enum ButtonVariant { primary, secondary }

enum ButtonSize { sm, md, lg }

/// A clickable action trigger. Primary drives the single most important action per view.
class Button extends StatelessWidget {
  const Button({
    super.key,
    this.variant = ButtonVariant.primary,
    this.size = ButtonSize.md,
    this.disabled = false,
    this.loading = false,
    this.child,
    this.onPressed,
  });

  final ButtonVariant variant;
  final ButtonSize size;
  final bool disabled;
  final bool loading;
  /// Button label content.
  final Widget? child;
  final VoidCallback? onPressed;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final t = _ButtonTokens.resolve(variant, constraints.maxWidth);
        final box = Container(
          padding: EdgeInsets.symmetric(horizontal: t.paddingX ?? 0, vertical: t.paddingY ?? 0),
          decoration: BoxDecoration(
            color: t.backgroundColor,
            borderRadius: BorderRadius.circular(t.radius ?? 0),
            border: t.borderColor == null ? null : Border.all(color: t.borderColor!, width: t.borderWidth ?? 1),
          ),
          child: DefaultTextStyle.merge(style: (t.textStyle ?? const TextStyle()).copyWith(color: t.textColor), child: loading ? const SizedBox.square(dimension: 16, child: CircularProgressIndicator(strokeWidth: 2)) : child ?? const SizedBox.shrink()),
        );
        final enabled = onPressed != null && !disabled && !loading;
        return Semantics(
          button: true,
          enabled: enabled,
          child: MouseRegion(
            cursor: enabled ? SystemMouseCursors.click : SystemMouseCursors.basic,
            child: GestureDetector(onTap: enabled ? onPressed : null, child: box),
          ),
        );
      },
    );
  }
}

/// Button's design tokens: base, per-variant and per-breakpoint overrides.
class _ButtonTokens {
  const _ButtonTokens({this.backgroundColor, this.textColor, this.textStyle, this.borderColor, this.borderWidth, this.radius, this.paddingX, this.paddingY});

  final Color? backgroundColor;
  final Color? textColor;
  final TextStyle? textStyle;
  final Color? borderColor;
  final double? borderWidth;
  final double? radius;
  final double? paddingX;
  final double? paddingY;

  _ButtonTokens merge(_ButtonTokens o) => _ButtonTokens(
        backgroundColor: o.backgroundColor ?? backgroundColor,
        textColor: o.textColor ?? textColor,
        textStyle: o.textStyle ?? textStyle,
        borderColor: o.borderColor ?? borderColor,
        borderWidth: o.borderWidth ?? borderWidth,
        radius: o.radius ?? radius,
        paddingX: o.paddingX ?? paddingX,
        paddingY: o.paddingY ?? paddingY,
      );

  static const base = _ButtonTokens(
    backgroundColor: c_primary,
    textColor: c_surface,
    textStyle: t_label_md,
    radius: r_md,
    paddingX: s_md,
    paddingY: s_sm,
  );
  static const variantPrimary = _ButtonTokens();
  static const variantSecondary = _ButtonTokens(
    backgroundColor: c_surface,
    textColor: c_primary,
    borderColor: c_border,
    borderWidth: bw_thin,
  );
  static const atTablet = _ButtonTokens(
    paddingX: s_lg,
  );
  static const atDesktop = _ButtonTokens(
    paddingX: s_xl,
    paddingY: s_md,
  );

  /// Mobile-first cascade: base, then the variant, then each breakpoint the width reaches.
  static _ButtonTokens resolve(ButtonVariant variant, double width) {
    var t = base.merge(switch (variant) {
      ButtonVariant.primary => variantPrimary,
      ButtonVariant.secondary => variantSecondary,
    });
    if (width >= bp_tablet) t = t.merge(atTablet);
    if (width >= bp_desktop) t = t.merge(atDesktop);
    return t;
  }
}
",
    "filename": "lib/widgets/Button/button.dart",
    "language": "dart",
  },
  {
    "content": "// Generated by design-spec — do not edit by hand.
// Source of truth: design-spec.schema.json. Run \`design-spec compile\` to regenerate.
// ignore_for_file: non_constant_identifier_names, constant_identifier_names

import 'package:flutter/material.dart';

import '../../theme/app_colors.dart';
import '../../theme/app_spacing.dart';
import '../../theme/app_typography.dart';

/// A single-line text field with label, helper text, and error states.
class Input extends StatelessWidget {
  const Input({
    super.key,
    this.label,
    this.placeholder,
    this.disabled = false,
    this.error,
    this.controller,
    this.onChanged,
  });

  final String? label;
  final String? placeholder;
  final bool disabled;
  /// Error message; switches the field to its error state.
  final String? error;
  final TextEditingController? controller;
  final ValueChanged<String>? onChanged;

  @override
  Widget build(BuildContext context) {
    return LayoutBuilder(
      builder: (context, constraints) {
        final t = _InputTokens.resolve(constraints.maxWidth);
        final border = OutlineInputBorder(borderRadius: BorderRadius.circular(t.radius ?? 0), borderSide: t.borderColor == null ? BorderSide.none : BorderSide(color: t.borderColor!, width: t.borderWidth ?? 1));
        final field = TextField(
          controller: controller,
          onChanged: onChanged,
          enabled: !disabled,
          style: (t.textStyle ?? const TextStyle()).copyWith(color: t.textColor),
          decoration: InputDecoration(
            labelText: label,
            hintText: placeholder,
            errorText: error,
            filled: t.backgroundColor != null,
            fillColor: t.backgroundColor,
            contentPadding: EdgeInsets.symmetric(horizontal: t.paddingX ?? 0, vertical: t.paddingY ?? 0),
            border: border,
            enabledBorder: border,
          ),
        );
        return field;
      },
    );
  }
}

/// Input's design tokens: base, per-variant and per-breakpoint overrides.
class _InputTokens {
  const _InputTokens({this.backgroundColor, this.textColor, this.textStyle, this.borderColor, this.borderWidth, this.radius, this.paddingX, this.paddingY});

  final Color? backgroundColor;
  final Color? textColor;
  final TextStyle? textStyle;
  final Color? borderColor;
  final double? borderWidth;
  final double? radius;
  final double? paddingX;
  final double? paddingY;

  _InputTokens merge(_InputTokens o) => _InputTokens(
        backgroundColor: o.backgroundColor ?? backgroundColor,
        textColor: o.textColor ?? textColor,
        textStyle: o.textStyle ?? textStyle,
        borderColor: o.borderColor ?? borderColor,
        borderWidth: o.borderWidth ?? borderWidth,
        radius: o.radius ?? radius,
        paddingX: o.paddingX ?? paddingX,
        paddingY: o.paddingY ?? paddingY,
      );

  static const base = _InputTokens(
    backgroundColor: c_surface,
    textColor: c_on_surface,
    textStyle: t_body_md,
    borderColor: c_border,
    borderWidth: bw_thin,
    radius: r_md,
    paddingX: s_md,
    paddingY: s_sm,
  );

  /// Mobile-first cascade: base, then each breakpoint the width reaches.
  static _InputTokens resolve(double width) {
    return base;
  }
}
",
    "filename": "lib/widgets/Input/input.dart",
    "language": "dart",
  },
]
`;
